--- a/cmechabbrev.tex
+++ b/cmechabbrev.tex
@@ -19,11 +19,11 @@
 
 % Processes and sequences
 
-\newcommand{\Process}{\ensuremath{\mathcal{P}}}
+\newcommand{\Process}{\ensuremath{\mathcal{P}}\xspace}
 
 \newcommand{\ProbMach}{\Prob_{\mathrm{M}}}
 \newcommand{\Lmax}   { {L_{\mathrm{max}}}}
-\newcommand{\MeasAlphabet}      {\ensuremath{\mathcal{A}}}
+\newcommand{\MeasAlphabet}      {\ensuremath{\mathcal{A}}\xspace}
 % Original symbol
 %\newcommand{\MeasSymbol}   { {S} }
 %\newcommand{\meassymbol}   { {s} }
