--- a/dynlearn.sty
+++ b/dynlearn.sty
@@ -79,6 +79,7 @@
 \FXRegisterAuthor{jpc}{ajpc}{JPC}
 \FXRegisterAuthor{rgj}{argj}{\color{ryan}RGJ}
 \FXRegisterAuthor{jrm}{ajrm}{JRM}
+\FXRegisterAuthor{nfs}{anfs}{NFS}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % foreign stuff, stolen from (and not included because of build systems)
